project rename, clean up
